// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengesList should render when unlocked all levels 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSet
    challenges={
      Array [
        Object {
          "challengeType": "brisk walk",
          "currentWorld": 0,
          "duration": "10",
          "reward": "0-3",
        },
        Object {
          "challengeType": "long walk",
          "currentWorld": 0,
          "duration": "30",
          "reward": "0-6",
        },
        Object {
          "challengeType": "short stroll",
          "currentWorld": 0,
          "duration": "5",
          "reward": "0-1",
        },
        Object {
          "challengeType": "meditation",
          "currentWorld": 0,
          "duration": "3-10",
          "reward": "0-3",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <ChallengeTile
            challengeType="brisk walk"
            currentWorld={0}
            duration="10"
            isImageBackgroundFlipped={false}
            reward="0-3"
          />
          <ChallengeTile
            challengeType="long walk"
            currentWorld={0}
            duration="30"
            isImageBackgroundFlipped={true}
            reward="0-6"
          />
        </View>,
        <View
          style={
            Object {
              "marginLeft": "auto",
              "marginTop": 74,
            }
          }
        >
          <ChallengeTile
            challengeType="short stroll"
            currentWorld={0}
            duration="5"
            isImageBackgroundFlipped={true}
            reward="0-1"
          />
          <ChallengeTile
            challengeType="meditation"
            currentWorld={0}
            duration="3-10"
            isImageBackgroundFlipped={false}
            reward="0-3"
          />
        </View>,
      ],
      "style": Object {
        "flexDirection": "row",
        "height": "100%",
        "transform": Array [
          Object {
            "translateY": 20,
          },
        ],
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ChallengeTile
              challengeType="brisk walk"
              currentWorld={0}
              duration="10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />,
            <ChallengeTile
              challengeType="long walk"
              currentWorld={0}
              duration="30"
              isImageBackgroundFlipped={true}
              reward="0-6"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "challengeType": "brisk walk",
              "currentWorld": 0,
              "duration": "10",
              "isImageBackgroundFlipped": false,
              "reward": "0-3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "challengeType": "long walk",
              "currentWorld": 0,
              "duration": "30",
              "isImageBackgroundFlipped": true,
              "reward": "0-6",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ChallengeTile
              challengeType="short stroll"
              currentWorld={0}
              duration="5"
              isImageBackgroundFlipped={true}
              reward="0-1"
            />,
            <ChallengeTile
              challengeType="meditation"
              currentWorld={0}
              duration="3-10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />,
          ],
          "style": Object {
            "marginLeft": "auto",
            "marginTop": 74,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "challengeType": "short stroll",
              "currentWorld": 0,
              "duration": "5",
              "isImageBackgroundFlipped": true,
              "reward": "0-1",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "challengeType": "meditation",
              "currentWorld": 0,
              "duration": "3-10",
              "isImageBackgroundFlipped": false,
              "reward": "0-3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <ChallengeTile
              challengeType="brisk walk"
              currentWorld={0}
              duration="10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />
            <ChallengeTile
              challengeType="long walk"
              currentWorld={0}
              duration="30"
              isImageBackgroundFlipped={true}
              reward="0-6"
            />
          </View>,
          <View
            style={
              Object {
                "marginLeft": "auto",
                "marginTop": 74,
              }
            }
          >
            <ChallengeTile
              challengeType="short stroll"
              currentWorld={0}
              duration="5"
              isImageBackgroundFlipped={true}
              reward="0-1"
            />
            <ChallengeTile
              challengeType="meditation"
              currentWorld={0}
              duration="3-10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />
          </View>,
        ],
        "style": Object {
          "flexDirection": "row",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 20,
            },
          ],
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ChallengeTile
                challengeType="brisk walk"
                currentWorld={0}
                duration="10"
                isImageBackgroundFlipped={false}
                reward="0-3"
              />,
              <ChallengeTile
                challengeType="long walk"
                currentWorld={0}
                duration="30"
                isImageBackgroundFlipped={true}
                reward="0-6"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "challengeType": "brisk walk",
                "currentWorld": 0,
                "duration": "10",
                "isImageBackgroundFlipped": false,
                "reward": "0-3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "challengeType": "long walk",
                "currentWorld": 0,
                "duration": "30",
                "isImageBackgroundFlipped": true,
                "reward": "0-6",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ChallengeTile
                challengeType="short stroll"
                currentWorld={0}
                duration="5"
                isImageBackgroundFlipped={true}
                reward="0-1"
              />,
              <ChallengeTile
                challengeType="meditation"
                currentWorld={0}
                duration="3-10"
                isImageBackgroundFlipped={false}
                reward="0-3"
              />,
            ],
            "style": Object {
              "marginLeft": "auto",
              "marginTop": 74,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "challengeType": "short stroll",
                "currentWorld": 0,
                "duration": "5",
                "isImageBackgroundFlipped": true,
                "reward": "0-1",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "challengeType": "meditation",
                "currentWorld": 0,
                "duration": "3-10",
                "isImageBackgroundFlipped": false,
                "reward": "0-3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengesList should render when unlocked only first level 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSet
    challenges={
      Array [
        Object {
          "challengeType": "brisk walk",
          "currentWorld": 0,
          "duration": "10",
          "reward": "0-3",
        },
        Object {
          "currentWorld": 0,
          "isLocked": true,
          "minimumLevel": 4,
        },
        Object {
          "currentWorld": 0,
          "isLocked": true,
          "minimumLevel": 2,
        },
        Object {
          "currentWorld": 0,
          "isLocked": true,
          "minimumLevel": 10,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <ChallengeTile
            challengeType="brisk walk"
            currentWorld={0}
            duration="10"
            isImageBackgroundFlipped={false}
            reward="0-3"
          />
          <ChallengeTile
            currentWorld={0}
            isImageBackgroundFlipped={true}
            isLocked={true}
            minimumLevel={4}
          />
          <ChallengeTile
            currentWorld={0}
            isImageBackgroundFlipped={false}
            isLocked={true}
            minimumLevel={2}
          />
          <ChallengeTile
            currentWorld={0}
            isImageBackgroundFlipped={true}
            isLocked={true}
            minimumLevel={10}
          />
        </View>,
        <View
          style={
            Object {
              "marginLeft": "auto",
              "marginTop": 74,
            }
          }
        />,
      ],
      "style": Object {
        "flexDirection": "row",
        "height": "100%",
        "transform": Array [
          Object {
            "translateY": 20,
          },
        ],
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ChallengeTile
              challengeType="brisk walk"
              currentWorld={0}
              duration="10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />,
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={true}
              isLocked={true}
              minimumLevel={4}
            />,
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={false}
              isLocked={true}
              minimumLevel={2}
            />,
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={true}
              isLocked={true}
              minimumLevel={10}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "challengeType": "brisk walk",
              "currentWorld": 0,
              "duration": "10",
              "isImageBackgroundFlipped": false,
              "reward": "0-3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "currentWorld": 0,
              "isImageBackgroundFlipped": true,
              "isLocked": true,
              "minimumLevel": 4,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "currentWorld": 0,
              "isImageBackgroundFlipped": false,
              "isLocked": true,
              "minimumLevel": 2,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "currentWorld": 0,
              "isImageBackgroundFlipped": true,
              "isLocked": true,
              "minimumLevel": 10,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [],
          "style": Object {
            "marginLeft": "auto",
            "marginTop": 74,
          },
        },
        "ref": null,
        "rendered": Array [],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <ChallengeTile
              challengeType="brisk walk"
              currentWorld={0}
              duration="10"
              isImageBackgroundFlipped={false}
              reward="0-3"
            />
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={true}
              isLocked={true}
              minimumLevel={4}
            />
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={false}
              isLocked={true}
              minimumLevel={2}
            />
            <ChallengeTile
              currentWorld={0}
              isImageBackgroundFlipped={true}
              isLocked={true}
              minimumLevel={10}
            />
          </View>,
          <View
            style={
              Object {
                "marginLeft": "auto",
                "marginTop": 74,
              }
            }
          />,
        ],
        "style": Object {
          "flexDirection": "row",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 20,
            },
          ],
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ChallengeTile
                challengeType="brisk walk"
                currentWorld={0}
                duration="10"
                isImageBackgroundFlipped={false}
                reward="0-3"
              />,
              <ChallengeTile
                currentWorld={0}
                isImageBackgroundFlipped={true}
                isLocked={true}
                minimumLevel={4}
              />,
              <ChallengeTile
                currentWorld={0}
                isImageBackgroundFlipped={false}
                isLocked={true}
                minimumLevel={2}
              />,
              <ChallengeTile
                currentWorld={0}
                isImageBackgroundFlipped={true}
                isLocked={true}
                minimumLevel={10}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "challengeType": "brisk walk",
                "currentWorld": 0,
                "duration": "10",
                "isImageBackgroundFlipped": false,
                "reward": "0-3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "currentWorld": 0,
                "isImageBackgroundFlipped": true,
                "isLocked": true,
                "minimumLevel": 4,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "currentWorld": 0,
                "isImageBackgroundFlipped": false,
                "isLocked": true,
                "minimumLevel": 2,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "currentWorld": 0,
                "isImageBackgroundFlipped": true,
                "isLocked": true,
                "minimumLevel": 10,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [],
            "style": Object {
              "marginLeft": "auto",
              "marginTop": 74,
            },
          },
          "ref": null,
          "rendered": Array [],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
